hphp/test/zend/good/tests-classes/final_ctor3.php.exp
HipHop Fatal error: Cannot override final method A::A() in hphp/test/zend/good/tests-classes/final_ctor3.php on line 5
